index.html szecsi compatibility update

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 </head>
 <body>
 <h1>FU ME MANGER</h1>
-<div>Nem birom maa</div>
+<div>Nem birom maa<br>Leccivees<br><b>Engedj maa hazaaa</b></div>
 </body>
