--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Szép Weboldal</title>
+    <title>Fobi Weboldal</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f0f8ff;
-            background-image: url('https://via.placeholder.com/1600x900.png?text=Szép+Hátter+Kép');
+            background-image: url('https://via.placeholder.com/1600x900.png?text=Fobi+Hátter+Kép');
             background-size: cover;
             background-position: center;
             color: #fff;
@@ -75,7 +75,7 @@
 </head>
 <body>
     <header>
-        <h1>Üdvözlünk a Szép Weboldalon!</h1>
+        <h1>Üdvözlünk a Fobi Weboldalon!</h1>
         <nav>
             <a href="#home">Kezdőlap</a>
             <a href="#about">Rólunk</a>
@@ -91,7 +91,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Szép Weboldal. Minden jog fenntartva.</p>
+        <p>&copy; 2025 Fobi Weboldal. Minden jog fenntartva.</p>
     </footer>
 </body>
 </html>
